@@ -4,6 +4,8 @@ class Sys::Time {
   use Sys::Time::Itimerval;
   
   native static method gettimeofday : int ($tv : Sys::Time::Timeval, $tz : Sys::Time::Timezone);
+
+  native static method clock : long ();
   
   # TODO
 
