@@ -15,6 +15,8 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
 
 ok(SPVM::TestCase::Sys::Time->gettimeofday);
 
+ok(SPVM::TestCase::Sys::Time->clock);
+
 SPVM::set_exception(undef);
 
 # All object is freed
