@@ -12,6 +12,7 @@
     * Added the following methods to the Sys::Time class.
       
       static method gettimeofday ($tv : Sys::Time::Timeval, $tz : Sys::Time::Timezone);
+      static method clock : long ();
       
     * Added the Sys::Time::Timespec class.
     * Added the Sys::Time::Itimerval class.
